--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
         <link rel="stylesheet" href="./style.css" type="text/css">
     </head>
     <body>
+        <!-- Name of our group -->
         <div>        
-            <h1>Welcome to the best class ever!</h1>
+            <h1 class="name">The Name of Our Group</h1>
         </div>
-
+        <!-- general information -->
         <div>
-            <h2 class="titles">Class Information</h2>
+            <h2 class="titles">Details below</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, perspiciatis temporibus deleniti dolores fugiat sed obcaecati id reiciendis, doloribus accusantium cum eum minus repellat accusamus aperiam veritatis quidem consequatur. Repellat!</p>
         </div>
-
+         <!-- List of people in our group -->
         <div>
-            <h3 class="titles">Our Lovely People</h2>
+            <h3 class="titles">Our People</h2>
             <ul>
                 <li><a href="people/IrynaShymbor.html">Iryna Shymbor</a></li>
                 <li><a href="people/JamesKnight.html">James Knight</a></li>
