--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
             <h2 class="titles">Details below</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, perspiciatis temporibus deleniti dolores fugiat sed obcaecati id reiciendis, doloribus accusantium cum eum minus repellat accusamus aperiam veritatis quidem consequatur. Repellat!</p>
         </div>
-         <!-- List of people in our group -->
+         <!-- List of class-personal-page in our group -->
         <div>
             <h3 class="titles">Our People</h2>
             <ul>
-                <li><a href="people/IrynaShymbor.html"target"_blank">Iryna Shymbor</a></li>
-                <li><a href="people/JamesKnight.html"target"_blank">James Knight</a></li>
-                <li><a href="people/AngelaJohnson.html"target"_blank">Angela Johnson</a></li>
-                <li><a href="people/DaisyWatt.html"target"_blank">Daisy Watt</a></li>
-                <li><a href="people/JacobKnight.html"target"_blank">Jacob Knight</a></li>
-                <li><a href="people/JesseLukos.html"target"_blank">Jesse Lukos</a></li>
-                <li><a href="people/JihyungKim.html"target"_blank">Jihyung Kim</a></li>
-                <li><a href="people/KateBeaumont.html"target"_blank">Kate Beaumont</a></li>
-                <li><a href="people/KorayEren.html"target"_blank">Koray Eren</a></li>
-                <li><a href="people/LeighPoulier.html"target"_blank">Leigh Poulier</a></li>
-                <li><a href="people/LukeGunders.html"target"_blank">Luke Gunders</a></li>
-                <li><a href="people/NicholasCarr.html"target"_blank">Nicholas Carr</a></li>
-                <li><a href="people/ShriyaDhar.html"target"_blank">Shriya Dhar</a></li>
-                <li><a href="people/TigerO'Brien.html"target"_blank">Tiger O'Brien</a></li>
-                <li><a href="people/VanLamRemRuatBualthang.html"target"_blank">Van Lam Rem Ruat Bualthang</a></li>
-                <li><a href="people/ZachariahMudge-Whelan.html"target"_blank">Zachariah Mudge-Whelan</a></li>
+                <li><a href="class-personal-page/IrynaShymbor.html"target"_blank">Iryna Shymbor</a></li>
+                <li><a href="class-personal-page/JamesKnight.html"target"_blank">James Knight</a></li>
+                <li><a href="class-personal-page/AngelaJohnson.html"target"_blank">Angela Johnson</a></li>
+                <li><a href="class-personal-page/DaisyWatt.html"target"_blank">Daisy Watt</a></li>
+                <li><a href="class-personal-page/JacobKnight.html"target"_blank">Jacob Knight</a></li>
+                <li><a href="class-personal-page/JesseLukos.html"target"_blank">Jesse Lukos</a></li>
+                <li><a href="class-personal-page/JihyungKim.html"target"_blank">Jihyung Kim</a></li>
+                <li><a href="class-personal-page/KateBeaumont.html"target"_blank">Kate Beaumont</a></li>
+                <li><a href="class-personal-page/KorayEren.html"target"_blank">Koray Eren</a></li>
+                <li><a href="class-personal-page/LeighPoulier.html"target"_blank">Leigh Poulier</a></li>
+                <li><a href="class-personal-page/LukeGunders.html"target"_blank">Luke Gunders</a></li>
+                <li><a href="class-personal-page/NicholasCarr.html"target"_blank">Nicholas Carr</a></li>
+                <li><a href="class-personal-page/ShriyaDhar.html"target"_blank">Shriya Dhar</a></li>
+                <li><a href="class-personal-page/TigerO'Brien.html"target"_blank">Tiger O'Brien</a></li>
+                <li><a href="class-personal-page/VanLamRemRuatBualthang.html"target"_blank">Van Lam Rem Ruat Bualthang</a></li>
+                <li><a href="class-personal-page/ZachariahMudge-Whelan.html"target"_blank">Zachariah Mudge-Whelan</a></li>
             </ul>
         </div>
 
