Test adding daisy page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="class-personal-page/LukeGunders.html"target"_blank">Luke Gunders</a></li>
                 <li><a href="class-personal-page/NicholasCarr.html"target"_blank">Nicholas Carr</a></li>
                 <li><a href="class-personal-page/ShriyaDhar.html"target"_blank">Shriya Dhar</a></li>
-                <li><a href="class-personal-page/TigerO'Brien.html"target"_blank">Tiger O'Brien</a></li>
+                <li><a href="class-personal-page/TigerOBrien.html"target"_blank">Tiger O'Brien</a></li>
                 <li><a href="class-personal-page/VanLamRemRuatBualthang.html"target"_blank">Van Lam Rem Ruat Bualthang</a></li>
                 <li><a href="class-personal-page/ZachariahMudge-Whelan.html"target"_blank">Zachariah Mudge-Whelan</a></li>
             </ul>
